# contabilidad-ia-desktop

./: .env  Documentacion.txt  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
